syntax = "proto3";

package controller;

import "common/CommonReq.proto";
import "common/CommonRes.proto";
import "google/protobuf/timestamp.proto";

option java_package = "org.harryng.demo.controller.grpc";
option java_multiple_files = true;

message LoginReq {
  common.CommonReq header = 1;
  string username = 3;
  string password = 4;
}
message LoginRes {
  common.CommonRes header = 1;
  string id = 2;
  string username = 3;
  google.protobuf.Timestamp requestTime = 4;
  string token = 5;
}

service AuthController {
  rpc Login(LoginReq) returns (LoginRes);
}